--- a/kitchen_system/orders/templates/orders/index.html
+++ b/kitchen_system/orders/templates/orders/index.html
@@ -29,7 +29,9 @@
      <div class="box-cont">
         <h1>Bloom Restaurant</h1>
          <p>Home of flavours </p>
-         <button class="btn">order now</button>
+         <!-- <button class="btn"><a href="{% url 'kitchen' %}"></a>order now</button> -->
+         <a href="{% url 'kitchen' %}" class="btn">Order Now</a>
+
      </div>
     </section>
 
