--- a/kitchen_system/orders/templates/orders/kitchen.html
+++ b/kitchen_system/orders/templates/orders/kitchen.html
@@ -36,7 +36,7 @@
   data-id="{{ item.id }}" 
   data-name="{{ item.name }}" 
   data-price="{{ item.price }}">
-  Order
+ <i class="fa-solid fa-plus" id="i"></i>
 </button>
 
         </div>
