--- a/kitchen_system/orders/templates/admin/orders/order/change_list.html
+++ b/kitchen_system/orders/templates/admin/orders/order/change_list.html
@@ -3,7 +3,16 @@
 
 {% block object-tools %}
 {{ block.super }}
-<li>
-    <a href="{% url 'admin:sales-report' %}" class="addlink">View Sales Report</a>
-</li>
+<ul class="object-tools">
+    <li>
+        <a href="{% url 'admin:sales-report' %}" class="addlink">View Sales Report</a>
+    </li>
+    <li>
+        <a href="{% url 'admin:sales-report-pdf' %}?start_date={{ request.GET.start_date }}&end_date={{ request.GET.end_date }}"
+            class="addlink">
+            Download Sales Report (PDF)
+        </a>
+    </li>
+
+</ul>
 {% endblock %}
