--- a/kitchen_system/orders/templates/orders/about.html
+++ b/kitchen_system/orders/templates/orders/about.html
@@ -23,7 +23,7 @@
 </header>
 
 <main style="max-width: 900px; margin: 40px auto; padding: 0 15px; font-family: century;">
-    <section style="background-color: #e2620d; padding: 20px; border-radius: 8px; color: white; margin-bottom: 40px;">
+    <section style="background-color: #f50404; padding: 20px; border-radius: 8px; color: white; margin-bottom: 40px;">
         <h2 style="color: #fff; margin-bottom: 10px;">Our Story</h2>
         <p style="font-weight: 300; line-height: 1.5;">
             Bloom Kitchen started as a small family-owned restaurant in 2010 in Mombasa, Kenya. Our mission has always been to bring authentic and delicious meals to our community, blending tradition with fresh, quality ingredients. Over the years, we have grown but remain committed to offering a warm, welcoming experience with every dish.
