--- a/kitchen_system/orders/templates/orders/index.html
+++ b/kitchen_system/orders/templates/orders/index.html
@@ -62,14 +62,14 @@
         </div>
    
         <div class="box-cont5">
-           <img src="{% static 'orders/images/pic3.jpg' %}" class="img" alt="Seafood Image">
+           <img src="{% static 'orders/images/sl1.jpg' %}" class="img" alt="Seafood Image">
          </div>
     </section>
 
     <section class="sec4">
         <br>
         <div class="box1">
-            <img src="{% static 'orders/images/pic4.jpg' %}" class="pic" alt="Special desert">
+            <img src="{% static 'orders/images/sm.jpg' %}" class="pic" alt="Special desert">
            <div class="card">
             <h4 class="c-title">Special desert</h4>
             <p class="c-text">Chocolate dip</p>
@@ -77,7 +77,7 @@
         </div>
 
         <div class="box2">
-            <img src="{% static 'orders/images/pic7.jpg' %}" class="pic" alt="Top smoothie">
+            <img src="{% static 'orders/images/sm1.jpg' %}" class="pic" alt="Top smoothie">
             <div class="card">
              <h4 class="c-title">Top smoothie</h4>
              <p class="c-text">Banana & strawberry mix</p>
@@ -85,7 +85,7 @@
         </div> 
 
         <div class="box3">
-            <img src="{% static 'orders/images/pic6.jpg' %}" class="pic" alt="Sunday special">
+            <img src="{% static 'orders/images/sh1.jpg' %}" class="pic" alt="Sunday special">
             <div class="card">
              <h4 class="c-title">Sunday special</h4>
              <p class="c-text">Chocolate vanilla smoothie</p>
