--- a/kitchen_system/orders/static/orders/kitchen.css
+++ b/kitchen_system/orders/static/orders/kitchen.css
@@ -15,7 +15,7 @@ header{
     background-size: cover;
     justify-content:flex-end ;
     background-repeat: no-repeat;
-    background-image: url(images/pic10.jpg);
+    background-image: url(images/b5.jpg);
 }
 
 .sp{
@@ -26,7 +26,7 @@ header{
     margin-right: 700px;
     padding: 5px 10px;
     color: rgb(236, 233, 230);
-    background-color:  rgb(255, 115, 0);
+    background-color: #f50404;
   }
   
   nav{
@@ -45,7 +45,7 @@ header{
   
       margin: 5px;
       padding: 5px 5px;
-      background-color: rgb(231, 137, 14);
+      background-color:#f50404;
   }
    nav .lik{
       color: #ffffff;
@@ -103,7 +103,7 @@ header{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: rgb(231, 137, 14);
+    background-color:#f50404;
     box-shadow: 0px 2px 4px 0px black;
  }
  .ig{
@@ -119,7 +119,7 @@ header{
 
  .card-title{
     margin: 5px;
-    color: #990202;
+    color: #fffcfc;
     font-weight: 300;
  }
  .card-des{
@@ -143,14 +143,14 @@ header{
     align-items: center;
     position: absolute;
     border-radius:50px;
-    background-color: #e2620d;
+    background-color: #d40a0a;
  }
 
 #i{
    
     font-weight: 100;
     font-size: 25px;
-    color: #130c0c;
+    color: #fdf9f9;
   
  }
 
@@ -165,7 +165,7 @@ header{
     padding: 20px;
     width: 350px;
     border-radius: 8px;
-    border: 2px solid #e2620d;
+    border: 2px solid#f50404;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     z-index: 1000;
     display: none;
@@ -190,13 +190,13 @@ header{
 }
 
 #order-popup button {
-    background-color: #e2620d;
+    background-color: #7a0505;
     color: white;
     border: none;
 }
 
 #order-popup button:hover {
-    background-color: #c75000;
+    background-color:#f50404;
 }
 
 #confirmation {
@@ -310,7 +310,7 @@ footer{
     display: flex;
     height: 200px;
     justify-content:space-evenly;
-    background-color: #e2620d;
+    background-color: #0d0500;
 }
 
 
