--- a/kitchen_system/orders/templates/orders/index.html
+++ b/kitchen_system/orders/templates/orders/index.html
@@ -49,8 +49,9 @@
     <section class="sec3">
         <div class="box-cont4">
             <h2>Try out our seafood ;</h2> <br>
-            <p class="desc">This cuisine is inspired by the Swahili dishes
-                from Pilau, to biryani.
+            <p class="desc">Enjoy swahili dishes at the comfort of your 
+                home.
+               
             </p>
             <p class="desc">Our restaurant is open to all.</p>
             <br>
