--- a/kitchen_system/orders/static/orders/kitchen.css
+++ b/kitchen_system/orders/static/orders/kitchen.css
@@ -103,7 +103,7 @@ header{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color:#f50404;
+    background-color:#926e00;
     box-shadow: 0px 2px 4px 0px black;
  }
  .ig{
@@ -143,7 +143,7 @@ header{
     align-items: center;
     position: absolute;
     border-radius:50px;
-    background-color: #d40a0a;
+    background-color: #f66565;
  }
 
 #i{
